[package]
name = "fuda"
# introduce version when the package is ready to publish
# version = "0.1.0"
authors = ["Masato Gosui <82705154+nekomachi-touge@users.noreply.github.com>"]
edition = "2021"
description = "A tag-based logging library for Rust"
repository = "https://github.com/nekomachi-touge/fuda"
license = "Apache-2.0"
keywords = ["log", "logging"]
categories = ["development-tools::debugging"]

[badges]
maintenace = { status = "experimental" }
